--- a/index.html
+++ b/index.html
@@ -23,7 +23,14 @@
   </header>
 
   <main>
-
+    <div class="filme-principal">
+      <div class="container">
+        <h3 class="titulo">The Blacklist</h3>
+        <p class="descricao">Após se entregar à polícia, um brilhante fugitivo oferece ajuda ao FBI, mas apenas se a
+          novata Elizabeth Keen
+          for sua parceira.</p>
+      </div>
+    </div>
   </main>
 
 </body>
