Estilizando botoes e título

--- a/index.html
+++ b/index.html
@@ -28,7 +28,11 @@
         <h3 class="titulo">The Blacklist</h3>
         <p class="descricao">Após se entregar à polícia, um brilhante fugitivo oferece ajuda ao FBI, mas apenas se a
           novata Elizabeth Keen
-          for sua parceira.</p>
+          for sua parceira. Assista agora a nova temporada de The Blacklist que está imperdível</p>
+        <div class="botoes">
+          <button role="button" class="botao">ASSISTIR AGORA</button>
+          <BUtton ole="button" class="botao">MAIS INFORMAÇÕES</BUtton>
+        </div>
       </div>
     </div>
   </main>
