icones dos botões

--- a/index.html
+++ b/index.html
@@ -29,14 +29,15 @@
         <p class="descricao">Após se entregar à polícia, um brilhante fugitivo oferece ajuda ao FBI, mas apenas se a
           novata Elizabeth Keen
           for sua parceira. Assista agora a nova temporada de The Blacklist que está imperdível</p>
-        <div class="botao">
-          <button role="button" class="botao">ASSISTIR AGORA</button>
-          <BUtton ole="button" class="botao">MAIS INFORMAÇÕES</BUtton>
+        <div class="botoes">
+          <button role="button" class="botao"><i class="fas fa-play"></i>ASSISTIR AGORA</button>
+          <BUtton ole="button" class="botao"><i class="fas fa-info-circle"></i>MAIS INFORMAÇÕES</BUtton>
         </div>
       </div>
     </div>
   </main>
 
+  <script src="https://kit.fontawesome.com/2c36e9b7b1.js"></script>
 </body>
 
 </html>
