--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./style/main.css">
 
+  <!--owl css-->
+  <link rel="stylesheet" href="./style/owl/owl.carousel.min.css">
+  <link rel="stylesheet" href="./style/owl/owl.theme.default.min.css">
+
   <title>NETFLIX CLONE</title>
 </head>
 
@@ -38,6 +42,8 @@
   </main>
 
   <script src="https://kit.fontawesome.com/2c36e9b7b1.js"></script>
+  <script src="./js/owl/jquery.min.js"></script>
+  <script src="./js/owl/owl.carousel.min.js"></script>
 </body>
 
 </html>
