--- a/index.html
+++ b/index.html
@@ -41,9 +41,31 @@
     </div>
   </main>
 
+  <div class="carrosel-filmes">
+    <div class="owl-carousel owl-theme">
+      <div class="item"><img class="box-filme" src="./img/mini1.jpg" alt="Ratched"></div>
+      <div class="item"><img class="box-filme" src="./img/mini2.jpg" alt="Santana"></div>
+      <div class="item"><img class="box-filme" src="./img/mini3.jpg" alt="Resgate"></div>
+      <div class="item"><img class="box-filme" src="./img/mini4.jpg" alt="Game of Thrones"></div>
+      <div class="item"><img class="box-filme" src="./img/mini5.jpg" alt="Bloodshot"></div>
+      <div class="item"><img class="box-filme" src="./img/mini6.jpg" alt="Jurassic World Acampamento Jurássico"></div>
+      <div class="item"><img class="box-filme" src="./img/mini7.jpg" alt="The Old Guard"></div>
+      <div class="item"><img class="box-filme" src="./img/mini8.jpg" alt="Coringa"></div>
+      <div class="item"><img class="box-filme" src="./img/mini9.jpg" alt="Mundo Duplo"></div>
+      <div class="item"><img class="box-filme" src="./img/mini10.jpg" alt="The Umbrella Academy"></div>
+      <div class="item"><img class="box-filme" src="./img/mini11.jpg" alt="Enola Holmes"></div>
+      <div class="item"><img class="box-filme" src="./img/mini12.jpg" alt="Lúcifer"></div>
+      <div class="item"><img class="box-filme" src="./img/mini13.jpg" alt="A Babá Rainha da Morte"></div>
+      <div class="item"><img class="box-filme" src="./img/mini14.jpg" alt="Origens Secretas"></div>
+      <div class="item"><img class="box-filme" src="./img/mini15.jpg" alt="Power"></div>
+    </div>
+  </div>
+  </div>
+
   <script src="https://kit.fontawesome.com/2c36e9b7b1.js"></script>
   <script src="./js/owl/jquery.min.js"></script>
   <script src="./js/owl/owl.carousel.min.js"></script>
+  <script src="./js/owl/setup.js"></script>
 </body>
 
 </html>
