--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./style/main.css">
 
+  <!--responsividade-->
+  <link rel="stylesheet" href="style/responsive.css">
+
   <!--owl css-->
   <link rel="stylesheet" href="./style/owl/owl.carousel.min.css">
   <link rel="stylesheet" href="./style/owl/owl.theme.default.min.css">
@@ -59,7 +62,6 @@
       <div class="item"><img class="box-filme" src="./img/mini14.jpg" alt="Origens Secretas"></div>
       <div class="item"><img class="box-filme" src="./img/mini15.jpg" alt="Power"></div>
     </div>
-  </div>
   </div>
 
   <script src="https://kit.fontawesome.com/2c36e9b7b1.js"></script>
