--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
   <header>
     <div class="container">
-      <h2 class="logo">NETFLIX</h2>
+      <img class="logo" src="./img/netflix-logo.png" alt="logo netflix">
       <nav>
         <a href="#">Início</a>
         <a href="#">Séries</a>
